<resources>
    <string name="app_name">Make me Move</string>
    <string name="button">Button</string>
    <string name="loginbtn">login</string>
    <string name="facebookbtn">facebookbtn</string>
    <string name="googlebtn">googlebtn</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration_page">Registration Page</string>
    <string name="facebook_login">facebook login</string>
    <string name="google_login">google login</string>
    <string name="registrate">Registrate</string>
    <string name="username">Username:</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="sport">Sport</string>
    <string name="title_activity_user2">Make me Move</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="find_event">Find</string>
    <string name="friends">Friends</string>
    <string name="ranklist">Ranklist</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="username_email">Username/Email</string>
    <string name="skillpoints">SkillPoints:</string>
    <string name="no_upcoming_event">No upcoming event</string>
    <string name="create_event">Create Event</string>
    <string name="sporttype">Sport:</string>
    <string name="category">Category:</string>
    <string name="date">Date:</string>
    <string name="create">Create</string>
    <string name="title">Title:</string>
    <string name="titlehint">title</string>
    <string name="datehint">date</string>
    <string name="visibility">Visibility:</string>
    <string name="location">Location:</string>
    <string name="length">Length(Hours):</string>
    <string name="lengthhint">length</string>
    <string name="min_skillpoint">Min Skillpoint:</string>
    <string name="minskillpointhint">min Skillpoint</string>
    <string name="max_skillpoint">Max skillpoint:</string>
    <string name="max_skillpointhint">max Skillpoint</string>
    <string name="description">Description:</string>
    <string name="descriptionhint">description</string>
    <string name="titleofevent">Title of event</string>
    <string name="add_filter">Add Filter</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="usernamehint">username</string>
    <string name="first_name">First Name: </string>
    <string name="first_namehint">first name</string>
    <string name="last_name">Last Name: </string>
    <string name="last_namehint">last name</string>
    <string name="birthday">Birthday: </string>
    <string name="picture">Picture: </string>
    <string name="gender">Gender:</string>
    <string name="empty">Null</string>
    <string name="permission">Permission:</string>
    <string name="permissionhint">permission</string>
    <string name="popularity">Popularity:</string>
    <string name="popularityhint">popularity</string>
    <string name="modify">Modify</string>
    <string name="sports">Sports</string>
    <string name="event">Event</string>
    <string name="join">Join</string>
    <string name="members">Members:</string>
    <string name="unfinished_events">Unfinished Events</string>
    <string name="pick_date">Pick Date</string>
    <string name="time">Time:</string>
    <string name="timehint">time</string>
    <string name="teams">Teams</string>
    <string name="result">Result</string>
    <string name="details">Details</string>
    <string name="leave">Leave</string>
    <string name="id">ID</string>
    <string name="pick_time">Pick Time</string>
    <string name="creator">TextView</string>
    <string name="numpeople">TextView</string>
    <string name="eventtype">TextView</string>
    <string name="close_event">Unfinished Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="eventstatus">Dashboard</string>
    <string name="nav_finished">Finished</string>
    <string name="nav_unfinished">Unfinished</string>
    <string name="nav_eventtitle">Events</string>
    <string name="my_events">My Events</string>
    <string name="joined_events">Joined Events</string>
    <string name="find_event_header">Find Event</string>
    <string name="team_capacity">Team Capacity:</string>
    <string name="member_capacity">Member Capacity:</string>
    <string name="teamcapacityhint">team capacity</string>
    <string name="member_capacityhint">member capacity</string>
    <string name="locationhint">location</string>
    <string name="close_event_button">Close Event</string>
    <string name="notifications_header">Notifications</string>
    <string name="sportname">SportName</string>
    <string name="creator_label">Creator:</string>
    <string name="categoryhint">category</string>
    <string name="NoTeams">NoTeams</string>
    <string name="NoResults">NoResults</string>

    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>Football</item>
        <item>Basketball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>
    <string-array name="category_array">
        <item>Normal Event</item>
        <item>Championship</item>
        <item>Training</item>
    </string-array>
    <string-array name="visibility_array">
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <string-array name="gender_array">
        <item>Man</item>
        <item>Woman</item>
        <item>Other</item>
    </string-array>
</resources>
