<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_findevent"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/find_event" />
        <item
            android:id="@+id/nav_createevent"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/create_event" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_ranklist"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/ranklist" />
    </group>

    <item android:title="@string/settings">
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/profile_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/logout" />
        </group>
    </item>

</menu>
