<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Headerbg"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/Headertext"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/username"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />


                <EditText
                    android:id="@+id/et_username"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/usernamehint"
                    android:inputType="none"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/first_name"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_firstname"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/first_namehint"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/last_name"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_lastname"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/last_namehint"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/birthday"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_birthday"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/datehint"
                    android:inputType="date"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/picture"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/ib_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    tools:srcCompat="@tools:sample/avatars" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/gender"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/s_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:entries="@array/gender_array"
                    android:popupBackground="@color/NormaltextColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/email"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:hint="@string/empty"
                    android:inputType="none"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/permission"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_permission"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/permissionhint"
                    android:inputType="none"
                    android:singleLine="true" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:text="@string/popularity"
                    android:textColor="@color/NormaltextColor"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_popularity"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/popularityhint"
                    android:inputType="none"
                    android:singleLine="true" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/greenbuttonshape"
                    android:text="@string/modify" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>