<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Headerbg"
            android:text="@string/find_event_header"
            android:textAlignment="center"
            android:textColor="@color/Headertext"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/background"
            android:ems="10"
            android:hint="@string/titleofevent"
            android:inputType="textPersonName"
            android:theme="@style/inputtext" />

        <Button
            android:id="@+id/bt_addfilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:background="@drawable/greenbuttonshape"
            android:text="@string/add_filter" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">
    <ListView
        android:id="@+id/lv_eventlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingTop="10dp" />
    </ScrollView>

</LinearLayout>